--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h1>Introduction</h1>
       <p>I am a bartender/server/freelance graphic designer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Pembroke, ON</p>
       <h1>What are your favorite hobbies?</h1>
       <p>Details here...</p>
       <h1>What's your dream job?</h1>
